# ExperimentalRoboticsLab-Assignment-2-OLD

./: .gitignore  README.md  armor_msgs.rar  conf.py  doxygen_config  index.rst  install_sphinx.sh
_docs/: catkin-notes.md  cpp-docs-template.md  how-to-setup-doxy-sphinx-ws.md  making-diagrams-with-plantuml.rst  rest-directives.md  run-the-project.md  setup_docs.sh
_other_docs/: how-to-setup-doxy-sphinx-ws.md
delete_me/: README.md  compile.sh  run.sh
delete_me/doxygen/: doxygen-config
delete_me/robocluedo/: CMakeLists.txt  package.xml
delete_me/robocluedo/config/: parameters.launch
delete_me/robocluedo/config/cluedo_items/: cluedo_what.txt
delete_me/robocluedo/config/cluedo_owl_ontology/last_ontology/: cluedo_last_ontology.owl
delete_me/robocluedo/docs/: UML.md  robocluedo_FSM.md  robocluedo_overall_arch.md  robocluedo_sequence.md
delete_me/robocluedo/docs/diagrams/: UML_FSM_xml.drawio  UML_components_arch_xml.drawio  UML_components_cluedo_armor_interface_xml.drawio  UML_components_cluedo_movement_controller_xml.drawio  UML_components_cluedo_oracle_xml.drawio  UML_components_cluedo_random_room_xml.drawio  UML_components_robocluedo_main_xml.drawio  UML_sequence_example_final.drawio  UML_sequence_example_xml.drawio
delete_me/robocluedo/include/armor_tools/: armor_tools.h
delete_me/robocluedo/launch/: run_robocluedo.launch
delete_me/robocluedo/launch/tests/: test_armor.launch  test_armor_tools.launch  test_cluedo_armor_interface.launch  test_cluedo_oracle.launch  test_cluedo_random_room.launch  test_oracle_plus_interface.launch
delete_me/robocluedo/scripts/: robocluedo_main.py  test_cluedo_armor_interface.py  test_cluedo_oracle.py  test_cluedo_random_room.py  test_oracle_plus_interface.py
delete_me/robocluedo/src/: cluedo_movement_controller.cpp  cluedo_oracle.cpp  cluedo_random_room.cpp  test_armor_tools.cpp
robocluedo_armor_interface/: CMakeLists.txt  index.rst  package.xml
robocluedo_armor_interface/config/: parameters.launch
robocluedo_armor_interface/launch/: run_interface.launch
robocluedo_armor_interface/msg/: Hint.msg  Hypothesis.rst
robocluedo_armor_interface/scripts/: test_cluedo_armor_interface.py
robocluedo_armor_interface/src/: cluedo_armor_interface.cpp  cluedo_armor_interface.rst
robocluedo_armor_interface/srv/: CheckSolution.srv
robocluedo_mission_manager/: CMakeLists.txt  index.rst  package.xml
robocluedo_mission_manager/_docs/: todo.md
robocluedo_mission_manager/launch/: run_mission_manager.launch  run_units.launch
robocluedo_mission_manager/src/: manipulation_unit.cpp  navigation_unit.cpp  planning_unit.cpp
robocluedo_movement_controller/: CMakeLists.txt  index.rst  package.xml
robocluedo_movement_controller/_docs/: how-to-nav-stack.md  moveit-setup-assistant.md  todo.md
robocluedo_movement_controller/config/: sim.rviz
robocluedo_movement_controller/launch/: move_base_benchmark.launch  run.launch  run_movement_controller.launch  run_navigation_stack.launch
robocluedo_movement_controller/param/: base_local_planner_params.yaml  costmap_common_params.yaml
robocluedo_movement_controller/src/: localisation_unit.cpp  manipulation_controller.cpp  navigation_controller.cpp
robocluedo_movement_controller/urdf/: robocluedo.urdf  robocluedo_2.urdf
robocluedo_movement_controller_msgs/: CMakeLists.txt  package.xml
robocluedo_movement_controller_msgs/msg/: OdomData.msg
robocluedo_movement_msgs/: CMakeLists.txt  index.rst  package.xml
robocluedo_msgs/: CMakeLists.txt  package.xml
robocluedo_msgs/msg/: Hypothesis.msg
robocluedo_msgs/srv/: AddHint.srv  DiscardHypothesis.srv  GoTo.srv  RandomRoom.srv
robocluedo_robot/: .setup_assistant  package.xml
robocluedo_robot_2/: .setup_assistant  CMakeLists.txt  package.xml
robocluedo_rosplan_interface/: CMakeLists.txt  index.rst  package.xml
robocluedo_rosplan_interface/_docs/: pddl-and-rosplan.md  robocluedo-planning-approach.md  robocluedo-pseudocode-interface.md  todo.md
robocluedo_rosplan_interface/data/: plan.pddl
robocluedo_rosplan_interface/include/dispatch_actions/: acquire_hint.h  feedback_manager.h  init_planning_system.h  manipulator_far_marker.h  manipulator_near_marker.h  move_to.h  move_to_center.h  sherlock_is_thinking.h
robocluedo_rosplan_interface/include/knowledge_base_tools/: kb_tools.h  robocluedo_kb_tools.h
robocluedo_rosplan_interface/include/robocluedo_rosplan_action_interface/: RPSimulatedActionInterface.h
robocluedo_rosplan_interface/launch/: 001-load_and_solve.launch  entire_rosplan_process.launch  load_robocluedo.launch  load_robocluedo_2.launch  load_rosplan.launch  load_simple.launch  run_actions.launch  run_project.launch
robocluedo_rosplan_interface/launch/blocksworld/: 001-load_and_solve.launch
robocluedo_rosplan_interface/pddl/: OUT.pddl
robocluedo_rosplan_interface/pddl/blocksworld/: blocks_domain.pddl  blocks_problem.pddl  blocksworld.rst
robocluedo_rosplan_interface/pddl/robocluedo/: popf_plan.pddl  robocluedo.md  robocluedo_domain.pddl  robocluedo_problem.pddl  solve_robocluedo_popf.sh
robocluedo_rosplan_interface/pddl/simpletest/: popf_plan.pddl  simple_domain.pddl  simple_problem.pddl  simpletest.md
robocluedo_rosplan_interface/src/: node_acquire_hint.cpp  node_init_planning_system.cpp  node_manipulator_far_marker.cpp  node_manipulator_near_marker.cpp  node_move_to.cpp  node_move_to_center.cpp  node_sherlock_is_thinking.cpp  robocluedo_pipeline_manager.cpp  test_load_and_run.cpp
robocluedo_rosplan_interface/src/ActionInterface/: RPActionInterface.cpp
robocluedo_rosplan_interface/src/dispatch_actions/: acquire_hint.cpp  feedback_manager.cpp  init_planning_system.cpp  manipulator_far_marker.cpp  manipulator_near_marker.cpp  move_to.cpp  move_to_center.cpp  sherlock_is_thinking.cpp
robocluedo_rosplan_interface/src/knowledge_base_tools/: kb_tools.cpp  robocluedo_kb_tools.cpp
robocluedo_rosplan_interface/src/testing/: test_kb_tools.cpp  test_load_and_run.cpp  test_pipeline.cpp  test_pipeline_dispatch.cpp  test_robocluedo_kb_tools.cpp
robocluedo_rosplan_interface_msgs/: CMakeLists.txt  package.xml
(+67 files in other folders)
